--- a/question3.css
+++ b/question3.css
@@ -68,11 +68,13 @@
 
 
 #bad {
-       -webkit-animation: swing 1s ease;
-        animation: swing 1s ease;
-        -webkit-animation-iteration-count: 1;
-        animation-iteration-count: 1;
+       -webkit-animation: swing 0s ease;
+        animation: swing 0s ease;
+        -webkit-animation-iteration-count: 0;
+        animation-iteration-count: 0;
 }
+
+
 
 
 img {
@@ -81,8 +83,10 @@ img {
         background-size: cover;
         background-repeat: no-repeat;
         display: block;
-        height: 125px;
-        width: 125px;
+        height: 325px;
+        width: 325px;
+        margin-left: 20px;
+        margin-top: 20px;
 }
 
 
@@ -94,8 +98,10 @@ img {
         background-size: cover;
         background-repeat: no-repeat;
         display: block;
-        height: 125px;
-        width: 125px;
+        height: 325px;
+        width: 320px;
+        margin-left: 20px;
+        margin-top: 20px;
 }
 
 .answer{
