--- a/q1/q1.css
+++ b/q1/q1.css
@@ -1,14 +1,20 @@
+.hero-image {
+background-color: tomato;
+}
 .quiz-wrapper {
   position: relative;
   display: block;
-  width: 510px;
+  margin: auto;
+  margin-top: 100px;
+  width: 550px;
   height: 450px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .quiz-wrapper p.question-description {
   background: #19286C;
   color: white;
   padding: 25px 20px;
+  text-align: center;
 }
 .quiz-wrapper ul.options {
   position: relative;
@@ -34,19 +40,21 @@
   position: relative;
   z-index: 50;
   font-size: 13px;
+  color: white
+  
 }
 .quiz-wrapper .answers {
   display: inline-block;
   width: 250px;
   font-size: 13px;
   line-height: 20px;
-  border: 1px solid black
+  
 }
 .quiz-wrapper .answers .target {
   display: inline-block;
   width: 110px;
-  background: lightblue;
-  margin: 0 3px;
+  margin: 4px;
+  margin-top: auto;
   text-align: center;
   border: 1px solid black
 }
@@ -69,6 +77,7 @@
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.7);
+  
 }
 .status {
   display: none;
@@ -78,8 +87,17 @@
   width: 80%;
   top: 220px;
   left: 47px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .status p {
   background: white;
   padding: 30px;
+}
+.next{
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 50px;
+}
+#fun{
+  margin-left: 45px;
 }
