bug fixes and added css

--- a/q1/q1.css
+++ b/q1/q1.css
@@ -1,6 +1,4 @@
-.hero-image {
-background-color: tomato;
-}
+
 .quiz-wrapper {
   position: relative;
   display: block;
@@ -40,7 +38,7 @@ background-color: tomato;
   position: relative;
   z-index: 50;
   font-size: 13px;
-  color: white
+  color: black
   
 }
 .quiz-wrapper .answers {
